DPC 183 - Support multiple resource types in export (#42)
* Add support for a resource type list to the JobModel of dpc-queue. First, part of the DPC-183 which aims to add support for the resource type query parameter.

- Resource type lists are persisted as a comma delimited string
- Add a test for queue and retrival.
- dpc-api and dpc-aggregator currently ignore the resource list. The next set of pushes will fix this.

* Support _type in the GroupResource API

- Modified GroupResource to handle _type in the query parameter
- Added tests FHIR to try out the new parameter

* Refactoring out JobModel.ResourceType

Replaced JobModel.ResourceType with the FHIR ResourceType enum and the validResourceTypes list. Also,   renamed resources to resourceTypes in the JobModel to add clarity in the code.

* Added support for multiple resource types in Aggregation Engine

- Filled out the MockBlueButtonClient
- Pulled out the workQueue part of the AggregationEngine to make it easier to unit test
- For now, choose to add resouce type into the export file name. May choose another convention later.

* Refactored the run loop

* Made the JobResource handle multiple resource types

Added support so that the JobResource will handle the case when multiple resource types are requested in the job. Also...
- Added the support for the QUEUED job status
- Added tests for the JobResource
- Added a getJob method to queue to return the JobModel. Didn't see a way to get resource types without this information
- Decided that files for each resource type will have the  format of <JobID>.<ResourceType>.ndjson

* Fixed a bug in JobModel

Caught by the commit-bot

* Fixing a couple of code climate catches

- Refactored MockBlueButtonClient to us a common method
- Added a default to
- Made a isValidResourceType as a helper function
- A ResourceTypeListConverter test to improve code coverage
- Using JobQueueFailure for the exception thrown by the AggregatorEngi